# studentPlanner

./: .gitignore  README.md  db.sqlite3  package-lock.json  package.json  pyproject.toml  tailwind.config.js
planner/: models.py  urls.py  views.py
planner/migrations/: 0001_initial.py
planner/templates/planner/: index.html  task_list.html
static/css/: output.css
studentPlanner/: asgi.py  settings.py  urls.py  wsgi.py
