[tool.poetry]
name = "studentplanner"
version = "0.1.0"
description = ""
authors = ["Bberto22 <alberto.rdgz1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-htmx = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
